# cockroachdb-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
crdb_analyzer/: __init__.py  cli.py  config.py  retry.py
crdb_analyzer/analyzers/: __init__.py  base.py  cluster_health.py  contention.py  data_skew.py  hot_nodes.py  hot_ranges.py  index_usage.py  job_status.py  lease_balance.py  node_hotspot.py  rebalance_status.py  stmt_errors.py  stmt_fingerprints.py  table_stats.py
crdb_analyzer/clients/: __init__.py  http_client.py  sql_client.py
crdb_analyzer/formatters/: __init__.py  output.py
crdb_analyzer/storage/: __init__.py  base.py  crdb_store.py  sqlite_store.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_config.py  test_formatters.py  test_new_analyzers.py  test_retry.py  test_storage.py
